aggiunto spotify e mDNS

--- a/freedwall.conf
+++ b/freedwall.conf
@@ -22,6 +22,13 @@ CHROMECAST="no"
 # enable multicast
 MULTICAST="no"
 
+# enable spotify
+SPOTIFY="no"
+
+# enable mDNS
+MDNS="no"
+
+
 
 ###############################################################################
 #### TCP/UDP PORTS SETTINGS ###################################################
